--- a/style.css
+++ b/style.css
@@ -591,7 +591,7 @@ background-image:
     }
      .register .rrdetails{
         width: 50%;
-        flex-direction: row;
+        flex-direction: column;
         font-size: 1rem;
      }
 }
@@ -608,5 +608,10 @@ background-image:
 
     .register form .inputBox input{
         width:100%;
+    }
+     .rrdetails {
+     justify-content: flex-start;
+     flex-direction: column;
+     font-size: 50%;
     }
 }
