--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ header .rrlogo{
   /* Home Section */
 .home{
     min-height: 100vh;
-    background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(../images/home.jpg) no-repeat;
+    background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(./images/home.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
